--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -5,5 +5,5 @@ spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.server.webflux.routes[0].id=test
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://eclient
-spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/main/test
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/test
 spring.cloud.gateway.server.webflux.routes[0].predicates[1]=Method=GET
