--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -7,3 +7,7 @@ spring.cloud.gateway.server.webflux.routes[0].id=test
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://eclient
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/test
 spring.cloud.gateway.server.webflux.routes[0].predicates[1]=Method=GET
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
