--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,12 +1,13 @@
 server.port=8766
 
-spring.application.name=api-gateway
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
 
-# Eureka
+spring.cloud.gateway.server.webflux.routes[0].id=test
+spring.cloud.gateway.server.webflux.routes[0].uri=lb://eclient
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/test
+spring.cloud.gateway.server.webflux.routes[0].predicates[1]=Method=GET
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
-# Zuul маршруты
-zuul.routes.eclient.path=/test/**
-zuul.routes.eclient.serviceId=eclient
