--- a/eclient.properties
+++ b/eclient.properties
@@ -5,3 +5,13 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+
+# Конфиг для вызова Service1:
+# если leave false -> используем базовый URL (внешний IP с https как у тебя был)
+service1.use-eureka=false
+service1.base-url=https://158.160.204.193:8443/Service1/
+
+# таймауты для RestTemplate (ms)
+service1.connect-timeout=5000
+service1.read-timeout=10000
