--- a/eclient.properties
+++ b/eclient.properties
@@ -10,7 +10,7 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 # Конфиг для вызова Service1:
 # если leave false -> используем базовый URL (внешний IP с https как у тебя был)
 service1.use-eureka=false
-service1.base-url=https://158.160.204.193:8544/Service1/
+service1.base-url=http://158.160.204.193:8544/Service1/
 
 # таймауты для RestTemplate (ms)
 service1.connect-timeout=5000
