--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,4 +1,9 @@
 server.port=8766
+server.ssl.enabled=true
+server.ssl.key-store=/home/ubuntu/ssl/gateway.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=gateway
 
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
