--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,4 +1,6 @@
 server.port=8766
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
 server.ssl.enabled=true
 server.ssl.key-store=/home/ubuntu/ssl/gateway.p12
 server.ssl.key-store-password=123456
