--- a/eclient.properties
+++ b/eclient.properties
@@ -1,5 +1,6 @@
 server.port=0
-
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
