--- a/eserver.properties
+++ b/eserver.properties
@@ -1,3 +1,5 @@
 server.port=8761
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
