--- a/eclient.properties
+++ b/eclient.properties
@@ -9,8 +9,11 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 
 # Конфиг для вызова Service1:
-service1.use-eureka=false
-service1.base-url=https://158.160.140.50:8545/Service1/
+service1.use-eureka=true
+service1.service-id=service1
+service1.service-path=Service1
+service1.gateway-url=https://158.160.140.50:8766
+#service1.base-url=https://158.160.140.50:8545/Service1/
 
 # таймауты для RestTemplate (ms)
 service1.connect-timeout=5000
