--- a/eclient.properties
+++ b/eclient.properties
@@ -1,20 +1,19 @@
 server.port=0
 logging.level.root=DEBUG
 logging.level.org.springframework=DEBUG
-# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 
-# Конфиг для вызова Service1:
-service1.use-eureka=true
-service1.service-id=service1
-service1.service-path=Service1
-service1.gateway-url=https://158.160.140.50:8766
+service1.use-eureka=false
+service1.base-url=https://158.160.140.50:8545/Service1/
+#service1.use-eureka=true
+#service1.service-id=service1
+#service1.service-path=Service1
+#service1.gateway-url=https://158.160.140.50:8766
 #service1.base-url=https://158.160.140.50:8545/Service1/
 
-# таймауты для RestTemplate (ms)
 service1.connect-timeout=5000
 service1.read-timeout=10000
