--- a/eclient.properties
+++ b/eclient.properties
@@ -8,7 +8,7 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 
 service1.use-eureka=false
-service1.base-url=https://158.160.140.50:8545/Service1/
+service1.base-url=https://158.160.140.50:8766/service1/Service1
 #service1.use-eureka=true
 #service1.service-id=service1
 #service1.service-path=Service1
