--- a/eclient.properties
+++ b/eclient.properties
@@ -7,7 +7,7 @@ eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 
-service1.use-eureka=false
+service1.use-eureka=true
 service1.base-url=https://158.160.140.50:8766/service1/Service1
 #service1.use-eureka=true
 #service1.service-id=service1
