--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -3,7 +3,7 @@ logging.level.root=DEBUG
 logging.level.org.springframework=DEBUG
 server.ssl.enabled=true
 server.ssl.key-store=/home/ubuntu/ssl/gateway.p12
-server.ssl.key-store-password=123456
+server.ssl.key-store-password=${SSL_KEYSTORE_PASSWORD}
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=gateway
 
